6.ingress-rule-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver.example.com
  namespace: myserver 
  annotations:
    kubernetes.io/ingress.class: "nginx" ##指定Ingress Controller的类型
    nginx.ingress.kubernetes.io/use-regex: "true" ##指定后面rules定义的path可以使用正则表达式
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600" ##连接超时时间,默认为5s
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600" ##后端服务器回转数据超时时间,默认为60s
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600" ##后端服务器响应超时时间,默认为60s
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" ##客户端上传文件，最大大小，默认为20m
    #nginx.ingress.kubernetes.io/rewrite-target: /index.html #URL重写,当访问的目标URL不存在就跳转到指定页面
    #nginx.ingress.kubernetes.io/app-root: /index.html
spec:
  rules:
  - host: httpserver.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: sample-httpserver-service #svc name
            port:
              number: 80 #svc port
